# decorator-registry

./: LICENSE  README.md  pyproject.toml
src/decorator_registry/: registry.py
tests/: test_import.py
