[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decorator-registry"
version = "0.1.0"
description = "Decorator registry with group-based enable/disable and deterministic application order"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jonathan Fellerer (AirborneKiwi)" }]
keywords = ["decorators", "registry", "instrumentation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]